--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,18 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+       <!-- base utils -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.8.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+            <type>bundle</type>
         </dependency>
     </dependencies>
 
