--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306//mmal
+spring.datasource.url=jdbc:mysql://localhost:3306/mmal
 spring.datasource.username=root
 spring.datasource.password=zzde
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+######## logging
+
+# color-coded output
+spring.output.ansi.enabled=always
+
