--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 ######## logging
-
+#logging.file=
+#logging.path=C:/Users/D1M/Desktop/daily/logging/
 # color-coded output
 spring.output.ansi.enabled=always
-
