--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.path=C:/Users/D1M/Desktop/daily/logging/
 # color-coded output
 spring.output.ansi.enabled=always
+
+server.servlet.session.timeout=
