--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 # color-coded output
 spring.output.ansi.enabled=always
 
-server.servlet.session.timeout=
+# servlet support
+#server.servlet.session.persistent=true
+server.servlet.session.timeout=30m
