--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>27.0.1-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
