--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.output.ansi.enabled=always
 # servlet support
 #server.servlet.session.persistent=true
 server.servlet.session.timeout=30m
+
+# custom config
